--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -20,6 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install dependencies
+        run: npx playwright install
+
       - name: Run all tests
         run: npx playwright test --reporter=list
 
