--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -30,4 +30,11 @@ jobs:
         run: npx playwright show-report
 
       - name: Generate Allure report
-        run:  npx allure generate allure-results --clean && npx allure open
+        run:  npx allure generate allure-results --clean -o allure-report
+
+      - name: Upload Allure report as artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: allure-report
+          path: allure-report
