--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -29,6 +29,12 @@ jobs:
       - name: Generate Allure report
         run:  npx allure generate allure-results --clean -o allure-report
 
+      - name: Upload Playwright HTML report as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
+
       - name: Upload Allure report as artifact
         uses: actions/upload-artifact@v4
         if: always()
